--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>status-checker</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
     crossorigin="anonymous">
+  <link rel="icon" href="src/assets/logo/favicon.png">
 </head>
 
 <body>
